# stack-repl-mixin

./: .gitignore  README.md  cabal.project  stack.yaml
non-base-prelude/: LICENSE  non-base-prelude.cabal
non-base-prelude/src/: Lib.hs
relude-as-prelude/: relude-as-prelude.cabal
