name:                non-base-prelude
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sjakobi/stack-repl-mixin#readme
license:             BSD3
license-file:        LICENSE
author:              Simon Jakobi
maintainer:          simon.jakobi@gmail.com
copyright:           Copyright (c) 2019 Simon Jakobi
category:            Web
build-type:          Simple
cabal-version:       2.0

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , morley-prelude
  mixins:              base hiding (Prelude)
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sjakobi/stack-repl-mixin
